public/style/main.css
@import url('./header.css');
@import url('./checklist.css');
@import url('./tabs.css');

* {
    font-family: 'Roboto', sans-serif;
}

/* Cool fun wacky font */
@font-face {
    font-family: 'cowboy';
    src: url(/fonts/gomarice_nandaka_western.ttf);
    font-weight: normal;
    font-style: normal;
}

.cowboy {
    font-family: 'cowboy', serif !important;
}

html, body, #root {
    padding: 0;
    margin: 0;
}

body {
    background-color: #f2f3ee;
    color: rgb(46, 46, 46);
    font-size: 1.2em;
    line-height: 140%;
}

/* Banners and other images to preload */
#preload {
    background-image:
    url(/images/fadedBoxes.jpg),
    url(/images/fadedMasthead.jpg),
    url(/images/movingAction.JPG),
    url(/images/crew.jpg);
	opacity: 0.0; 
	-ms-filter:progid:DXImageTransform.Microsoft.Alpha(Opacity= 0); /* // for IE8 */
	filter: alpha(opacity= 0); /* //for IE5-7 */
}

a {
    color: rgb(40, 70, 168)
}

a:hover {
    text-decoration: underline;
}

a:visited {
    color: rgb(123, 33, 158)
}

a:focus {
    border: 1px solid black !important;
}

#root {
    position: relative;
    padding-bottom: 200px;
    min-height: 100vh !important;
}

#footer {
    background: url(http://localhost:3000/images/boxPlaceholder.png) no-repeat;
    background-position: top left 15%;
    height: 200px;
    width: 100vw;
    margin: 0;
    padding: 2em;
    text-align: center;
    position: absolute;
    bottom: 0;
}

.rightUnlessStacked {
    text-align: right;
}

h1 {
    font-size: 3em;
    color: rgb(37, 37, 37);
    font-family: 'Roboto', sans-serif;
}

.bi {
    position: relative;
    top: 2px;
}

.container {
    width: 100%;
}

.container a:hover {
    text-decoration: underline;
}

.container img {
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    max-width: 100%;
    -webkit-box-shadow: 12px 12px 0px 0px rgba(35, 37, 28, 0.78);
    box-shadow: 12px 12px 0px 0px rgba(35, 37, 28, 0.78);
    margin-bottom: 1em;
    border: 1px solid rgba(35, 37, 28, 0.78);
}

.container button {
    -webkit-box-shadow: 6px 6px 4px 0px rgba(35, 37, 28, 0.78) !important;
    box-shadow: 6px 6px 4px 0px rgba(35, 37, 28, 0.4) !important;
    margin-bottom: 1em !important;
    border: 1px solid rgb(255, 255, 255) !important;
}

.container button:active {
    -webkit-box-shadow: 2px 2px 4px 0px rgba(35, 37, 28, 0.78) !important;
    box-shadow: 2px 2px 4px 0px rgba(35, 37, 28, 0.4) !important;
    margin-bottom: 1em !important;
    border: 1px solid rgb(155, 155, 155) !important;
    position: relative;
    top: 2px;
    left: 2px
}

.container button a {
    color: white;
}

.container button:active a {
    color: rgb(228, 228, 228);

}

.container p {
    font-size: 1.15em;
}

.container.picture h1 {
    color: rgb(255, 255, 255);
    display: inline;
    font-size: 4em;
    text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.49);
}

.container.picture p {
    background-color: white;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    color: #1d1d1d;
    padding: 5px;
    font-size: 1.5em;
    opacity: 0.9;
    -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=90);
    filter: alpha(opacity=90);
}

.container.dark {
    background-color: #3b3b3b;
    color: #f5f5f5;
}

.lightText {
    color: #f5f5f5;
}

.container.dark h1, .lightText h1 {
    color: #ffffff;
}

.container.dark *, .lightText * {
    color: #f5f5f5;
}

.container.dark strong, .lightText strong {
    color: white
}

.container.dark a, .lightText a {
    color: rgb(123, 197, 231)
}

.container.dark a:visited, .lightText a:visited {
    color: rgb(178, 138, 224)
}

.page {
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    margin-top: 2em;
    padding: 1em;
    max-width: 1300px;
    margin: 0 auto 0 auto;
    padding: 2em;
}

.page:not(.lightText) {
    color: #3b3b3b;
}

pre {
    font-family: monospace !important;
    font-size: 0.75em
}

@media only screen and (max-width: 1300px) {
    h1 {
        font-size: 2.5em;
    }

    .container.picture h1 {
        font-size: 3em;
    }
}

/* COLLAPSE */
@media only screen and (max-width: 767px) {
    h1 {
        /* text-align: center !important; */
        font-size: 2em;
    }

    .rightUnlessStacked {
        text-align: left;
    }

    .onlyOnLargeScreens {
        display: none !important;
        font-weight: 900;
    }
}

